# SteeringWheel

./: .autotools  .cproject  .gitignore  .project  Makefile.am  NEWS  README  configure.ac
src/: dashboard.glade  ecodrive_main.c  ecodrive_ui.glade  enginespeed.c  example-class.c  example-class.h  gobject_cli.c  gobject_gui.c  gobject_tutorial.c  heading.c  heading.glade  heading.h  locationdata.c  speed.c  speed.h
src/.deps/: gobject_tutorial.Po
src/models/: enginespeed.h  locationdata.h  vehiclespeed.c  vehiclespeed.h
src/views/: ecodrivemap.c  ecodrivemap.h
